--- a/ios/MyApp/Info.plist
+++ b/ios/MyApp/Info.plist
@@ -37,6 +37,12 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSFaceIDUsageDescription</key>
+  <string>$(PRODUCT_NAME) precisa usar seu FaceID</string>
+	<key>NSUserTrackingUsageDescription</key>
+  <string>$(PRODUCT_NAME) precisa usar dados para melhorar sua experiência</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+  <string>$(PRODUCT_NAME) precisa usar sua localização</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
