--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "29.5.0",
-    "metro-react-native-babel-preset": "^0.76.5",
+    "metro-react-native-babel-preset": "0.76.5",
     "react-test-renderer": "18.2.0",
+    "styled-components": "^5.3.11",
     "typescript": "4.9.5"
   },
   "reactNativePermissionsIOS": [
