--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
     "@babel/runtime": "7.22.3",
     "@jest/globals": "^29.5.0",
     "@react-native/metro-config": "0.72.6",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.7",
+    "@semantic-release/npm": "^10.0.3",
+    "@semantic-release/release-notes-generator": "^11.0.1",
     "@tsconfig/react-native": "3.0.2",
     "@types/metro-config": "0.76.3",
     "@types/node": "20.2.5",
