--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,8 +20,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: "corretto"
           java-version: 11
+          cache: "gradle"
       
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
@@ -43,3 +44,29 @@ jobs:
         with:
           name: android
           path: android/app/build/outputs/apk/release/app-release.apk
+
+  build-ios:
+    runs-on: macos-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      VERSION: ${{ github.event.release.tag_name }}
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          cache: "npm"
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build iOS
+        run: npm run ios build
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ios
+          path: ios/build/Build/Products/Release-iphoneos/MyApp.app
