fix: fix ios-build

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -46,7 +46,7 @@ jobs:
           path: android/app/build/outputs/apk/release/app-release.apk
 
   build-ios:
-    runs-on: macos-latest
+    runs-on: macos-12-xl
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       VERSION: ${{ github.event.release.tag_name }}
@@ -58,9 +58,12 @@ jobs:
         with:
           cache: "npm"
           node-version: 18
-
+      
       - name: Install dependencies
         run: npm ci
+
+      - name: Install Pods
+        run: cd ios && pod install
 
       - name: Build iOS
         run: npm run ios build
