--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -46,7 +46,7 @@ jobs:
           path: android/app/build/outputs/apk/release/app-release.apk
 
   build-ios:
-    runs-on: macos-12-xl
+    runs-on: macos-13
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       VERSION: ${{ github.event.release.tag_name }}
