chore: update project deps

--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "6.9.12",
     "axios": "1.4.0",
-    "lucide-react-native": "0.224.0",
+    "lucide-react-native": "0.233.0",
     "rambda": "7.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.0-rc.5",
+    "react-native": "0.72.0-rc.3",
     "react-native-device-info": "10.6.0",
-    "react-native-gesture-handler": "2.10.1",
+    "react-native-gesture-handler": "2.10.2",
     "react-native-mmkv-storage": "0.9.1",
     "react-native-permissions": "3.8.0",
-    "react-native-reanimated": "3.1.0",
+    "react-native-reanimated": "3.2.0",
     "react-native-safe-area-context": "4.5.3",
     "react-native-screens": "3.20.0",
     "react-native-svg": "13.9.0",
@@ -44,21 +44,21 @@
     "@jest/globals": "^29.5.0",
     "@react-native/metro-config": "0.72.6",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/commit-analyzer": "^10.0.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.7",
+    "@semantic-release/github": "^9.0.0",
     "@semantic-release/npm": "^10.0.3",
-    "@semantic-release/release-notes-generator": "^11.0.1",
+    "@semantic-release/release-notes-generator": "^11.0.2",
     "@tsconfig/react-native": "3.0.2",
     "@types/metro-config": "0.76.3",
     "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
+    "@types/react": "18.2.8",
     "@types/react-test-renderer": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
     "babel-jest": "29.5.0",
     "babel-plugin-root-import": "6.6.0",
-    "eslint": "8.41.0",
+    "eslint": "8.42.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -72,12 +72,7 @@
     "typescript": "4.9.5"
   },
   "reactNativePermissionsIOS": [
-    "AppTrackingTransparency",
     "FaceID",
-    "LocationWhenInUse",
-    "MediaLibrary",
-    "Motion",
-    "Notifications",
-    "PhotoLibrary"
+    "LocationWhenInUse"
   ]
 }
