--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lucide-react-native": "0.240.0",
     "rambda": "7.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.0-rc.3",
+    "react-native": "0.72.2",
     "react-native-device-info": "10.6.0",
     "react-native-gesture-handler": "2.10.2",
     "react-native-mmkv-storage": "0.9.1",
@@ -42,9 +42,9 @@
     "@babel/plugin-proposal-export-namespace-from": "7.18.9",
     "@babel/preset-env": "7.22.4",
     "@babel/runtime": "7.22.3",
-    "@faker-js/faker": "^8.0.2",
-    "@jest/globals": "^29.5.0",
-    "@react-native/metro-config": "0.72.6",
+    "@faker-js/faker": "8.0.2",
+    "@jest/globals": "29.5.0",
+    "@react-native/metro-config": "0.72.9",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^10.0.0",
     "@semantic-release/git": "^10.0.1",
@@ -68,7 +68,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "29.5.0",
-    "metro-react-native-babel-preset": "0.76.5",
+    "metro-react-native-babel-preset": "0.76.7",
     "react-test-renderer": "18.2.0",
     "styled-components": "^5.3.11",
     "typescript": "4.9.5"
