--- a/ios/exportOptions.plist
+++ b/ios/exportOptions.plist
@@ -2,15 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
-    <key>teamID</key>
-    <string>MYTEAMID123</string>
+    <key>destination</key>
+    <string>export</string>
     <key>method</key>
     <string>app-store</string>
-    <key>uploadSymbols</key>
-    <true />
-    <key>compileBitcode</key>
-    <true />
+    <key>signingStyle</key>
+    <string>automatic</string>
+    <key>generateAppStoreInformation</key>
+    <true/>
+    <key>stripSwiftSymbols</key>
+    <true/>
+    <key>teamID</key>
+    <string>5LF3CU7R9D</string>
     <key>uploadBitcode</key>
-    <true />
+    <true/>
+    <key>uploadSymbols</key>
+    <true/>
   </dict>
 </plist>
