--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/semantic-release.json",
   "branches": [
     "main",
     { "name": "develop", "prerelease": true }
@@ -9,10 +10,20 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    "semantic-release-react-native",
     "@semantic-release/github",
     ["@semantic-release/npm", {
       "npmPublish": false
     }],
-    "@semantic-release/git"
+    ["@semantic-release/git", {
+      "assets": [
+        "CHANGELOG.md",
+        "package.json",
+        "package-lock.json",
+        "ios/**/Info.plist",
+        "ios/**/*.pbxproj",
+        "android/app/build.gradle"
+      ]
+    }]
   ]
 }
