--- a/package.json
+++ b/package.json
@@ -11,72 +11,82 @@
     "ios": "./scripts.sh ios",
     "lint": "./scripts.sh lint",
     "test": "./scripts.sh test",
-    "postinstall": "./scripts.sh postinstall"
+    "env": "./scripts.sh env",
+    "prepare": "./scripts.sh prepare"
   },
   "dependencies": {
     "@react-native-community/blur": "4.3.2",
-    "@react-navigation/bottom-tabs": "6.5.8",
-    "@react-navigation/material-top-tabs": "6.6.3",
-    "@react-navigation/native": "6.1.7",
-    "@react-navigation/native-stack": "6.9.13",
-    "@shopify/flash-list": "^1.5.0",
-    "axios": "1.4.0",
-    "dayjs": "^1.11.9",
-    "lucide-react-native": "0.263.0",
-    "rambda": "8.3.0",
+    "@react-navigation/bottom-tabs": "6.5.11",
+    "@react-navigation/material-top-tabs": "6.6.5",
+    "@react-navigation/native": "6.1.9",
+    "@react-navigation/native-stack": "6.9.16",
+    "@shopify/flash-list": "1.6.2",
+    "@tanstack/react-query": "4.36.1",
+    "axios": "1.6.0",
+    "dayjs": "1.11.10",
+    "lucide-react-native": "0.291.0",
+    "rambda": "8.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-device-info": "10.8.0",
-    "react-native-gesture-handler": "2.12.1",
+    "react-native": "0.72.6",
+    "react-native-device-info": "10.11.0",
+    "react-native-gesture-handler": "2.13.4",
     "react-native-mmkv-storage": "0.9.1",
-    "react-native-permissions": "3.8.4",
-    "react-native-reanimated": "3.4.2",
-    "react-native-safe-area-context": "4.7.1",
-    "react-native-screens": "3.24.0",
-    "react-native-svg": "13.10.0",
+    "react-native-permissions": "3.10.1",
+    "react-native-reanimated": "3.5.4",
+    "react-native-safe-area-context": "4.7.4",
+    "react-native-screens": "3.27.0",
+    "react-native-svg": "13.14.0",
     "react-native-tab-view": "3.5.2",
-    "react-query": "3.39.3",
-    "zod": "3.21.4",
-    "zustand": "4.4.0"
+    "zod": "3.22.4",
+    "zustand": "4.4.5"
   },
   "devDependencies": {
-    "@babel/core": "7.22.9",
+    "@babel/core": "7.23.2",
     "@babel/plugin-proposal-export-namespace-from": "7.18.9",
-    "@babel/preset-env": "7.22.9",
-    "@babel/runtime": "7.22.6",
-    "@faker-js/faker": "8.0.2",
-    "@jest/globals": "29.6.2",
-    "@react-native/metro-config": "0.72.9",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^10.0.1",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^9.0.4",
-    "@semantic-release/npm": "^10.0.4",
-    "@semantic-release/release-notes-generator": "^11.0.4",
+    "@babel/preset-env": "7.23.2",
+    "@babel/runtime": "7.23.2",
+    "@faker-js/faker": "8.2.0",
+    "@jest/globals": "29.7.0",
+    "@react-native/metro-config": "0.72.11",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "11.0.0",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "9.2.1",
+    "@semantic-release/npm": "11.0.0",
+    "@semantic-release/release-notes-generator": "12.0.0",
     "@tsconfig/react-native": "3.0.2",
     "@types/metro-config": "0.76.3",
-    "@types/node": "20.4.7",
-    "@types/react": "18.2.18",
-    "@types/react-test-renderer": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "6.2.1",
-    "@typescript-eslint/parser": "6.2.1",
-    "babel-jest": "29.6.2",
+    "@types/node": "20.8.10",
+    "@types/react": "18.2.33",
+    "@types/react-test-renderer": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
+    "babel-jest": "29.7.0",
     "babel-plugin-root-import": "6.6.0",
-    "eslint": "8.46.0",
+    "eslint": "8.52.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.33.1",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "29.6.2",
+    "jest": "29.7.0",
     "metro-react-native-babel-preset": "0.77.0",
+    "react-query-native-devtools": "4.0.0",
     "react-test-renderer": "18.2.0",
-    "styled-components": "^6.0.7",
-    "typescript": "5.1.6"
+    "semantic-release-react-native": "1.8.2",
+    "simple-git-hooks": "^2.9.0",
+    "styled-components": "6.1.0",
+    "typescript": "5.2.2",
+    "react-native-flipper": "0.164.0"
   },
-  "reactNativePermissionsIOS": [
-    "FaceID",
-    "LocationWhenInUse"
-  ]
+  "overrides": {
+    "react-query-native-devtools": {
+      "react-native-flipper": "$react-native-flipper"
+    }
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm run lint",
+    "pre-push": "npm run test"
+  }
 }
