--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -3,73 +3,92 @@ name: CD
 concurrency:
   group: cd-${{ github.event.release.tag_name }}
   cancel-in-progress: true
-  
+
 on:
   release:
     types: [published]
 
 jobs:
+  health-check:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Node
+      uses: actions/setup-node@v3
+      with:
+        cache: "npm"
+        node-version-file: .nvmrc
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Test Types
+      run: npm run types
+
+    - name: Test Lint
+      run: npm run lint
+
+    - name: Test Unit
+      run: npm run test
+
   build-android:
+    needs: health-check
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       VERSION: ${{ github.event.release.tag_name }}
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: "corretto"
-          java-version: 11
-          cache: "gradle"
-      
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
+    - uses: actions/checkout@v3
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          cache: "npm"
-          node-version: 18
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        distribution: "temurin"
+        java-version: 11
+        cache: "gradle"
 
-      - name: Install dependencies
-        run: npm ci
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
 
-      - name: Build Android
-        run: npm run android build
+    - name: Setup Node
+      uses: actions/setup-node@v3
+      with:
+        cache: "npm"
+        node-version-file: .nvmrc
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: android
-          path: android/app/build/outputs/apk/release/app-release.apk
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build Android
+      run: npm run android build
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: android
+        path: android/app/build/outputs/apk/release/app-release.apk
 
   build-ios:
+    needs: health-check
     runs-on: macos-13
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       VERSION: ${{ github.event.release.tag_name }}
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          cache: "npm"
-          node-version: 18
-      
-      - name: Install dependencies
-        run: npm ci
+    - uses: actions/checkout@v3
 
-      - name: Install Pods
-        run: cd ios && pod install
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        cache: "npm"
+        node-version-file: .nvmrc
 
-      - name: Build iOS
-        run: npm run ios build
+    - name: Install dependencies
+      run: npm ci
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: ios
-          path: ios/build/Build/Products/Release-iphoneos/MyApp.app
+    - name: Install Pods
+      run: cd ios && pod install
+
+    - name: Build iOS Archive
+      run: npm run ios archive
