--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,94 +1,94 @@
 name: CI
 
+concurrency:
+  group: cd-${{ github.event.release.tag_name }}
+  cancel-in-progress: true
+
 on:
-  push:
-    branches: ["main"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "develop"]
 
 jobs:
-  # common health check
   health-check:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v2
+    - name: Setup Node
+      uses: actions/setup-node@v3
       with:
-        node-version: 20
+        cache: "npm"
+        node-version-file: .nvmrc
 
     - name: Install dependencies
       run: npm ci
 
-    - name: Tests
-      run: npm test
+    - name: Test Types
+      run: npm run types
 
-    - name: Lint
+    - name: Test Lint
       run: npm run lint
 
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+    - name: Test Unit
+      run: npm run test
 
-    - name: Build with Gradle
-      run: ./gradlew build
-  
-  # Android
-  android-health-check:
+  build-android:
     needs: health-check
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      VERSION: ${{ github.event.release.tag_name }}
     steps:
     - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
-        node-version: 20
+        distribution: "temurin"
+        java-version: 11
+        cache: "gradle"
+
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
+
+    - name: Setup Node
+      uses: actions/setup-node@v3
+      with:
+        cache: "npm"
+        node-version-file: .nvmrc
 
     - name: Install dependencies
       run: npm ci
 
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Build Android
+      run: npm run android build
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+        name: android
+        path: android/app/build/outputs/apk/release/app-release.apk
 
-    - name: Build with Gradle
-      run: ./gradlew assembleBuild
-
-  ios-health-check:
+  build-ios:
     needs: health-check
     runs-on: macos-13
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      VERSION: ${{ github.event.release.tag_name }}
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          cache: "npm"
-          node-version: 18
-      
-      - name: Install dependencies
-        run: npm ci
+    - uses: actions/checkout@v3
 
-      - name: Install Pods
-        run: cd ios && pod install
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        cache: "npm"
+        node-version-file: .nvmrc
 
-      - name: Build iOS
-        run: npm run ios build
+    - name: Install dependencies
+      run: npm ci
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: ios
-          path: ios/build/Build/Products/Release-iphoneos/MyApp.app
+    - name: Install Pods
+      run: cd ios && pod install
+
+    - name: Build iOS Archive
+      run: npm run ios archive
