--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native": "0.72.6",
     "react-native-device-info": "10.11.0",
     "react-native-gesture-handler": "2.13.4",
-    "react-native-mmkv-storage": "0.9.1",
+    "react-native-mmkv": "2.10.2",
     "react-native-permissions": "3.10.1",
     "react-native-reanimated": "3.5.4",
     "react-native-safe-area-context": "4.7.4",
@@ -55,6 +55,7 @@
     "@semantic-release/npm": "11.0.0",
     "@semantic-release/release-notes-generator": "12.0.0",
     "@tsconfig/react-native": "3.0.2",
+    "@types/jest": "^29.5.7",
     "@types/metro-config": "0.76.3",
     "@types/node": "20.8.10",
     "@types/react": "18.2.33",
@@ -72,13 +73,13 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "29.7.0",
     "metro-react-native-babel-preset": "0.77.0",
+    "react-native-flipper": "0.164.0",
     "react-query-native-devtools": "4.0.0",
     "react-test-renderer": "18.2.0",
     "semantic-release-react-native": "1.8.2",
     "simple-git-hooks": "^2.9.0",
     "styled-components": "6.1.0",
-    "typescript": "5.2.2",
-    "react-native-flipper": "0.164.0"
+    "typescript": "5.2.2"
   },
   "overrides": {
     "react-query-native-devtools": {
