--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@tsconfig/react-native/tsconfig.json",
+  "globals": {
+    "jest": true
+  },
   "compilerOptions": {
     "baseUrl": ".",
+    "types": ["jest", "react-native"],
     "paths": {
       "~/*": ["src/*"]
     }
