--- a/.github/workflows/CR.yml
+++ b/.github/workflows/CR.yml
@@ -6,28 +6,25 @@ concurrency:
 
 on:
   push:
-    branches:
-    - main
-    - develop
+    branches: [main, develop]
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-        persist-credentials: false
+    - uses: actions/checkout@v4
 
-    - uses: actions/setup-node@v3
+    - name: Setup Node
+      uses: actions/setup-node@v4
       with:
-        cache: "npm"
-        node-version: 18
+        node-version: 20
+        cache: 'npm'
+
 
     - name: Install dependencies
       run: npm ci
 
-    - name: Generate Release
+    - name: Semantic Release
       run: npx semantic-release
