chore: add types script to pre push hook in simple-git-hooks

--- a/package.json
+++ b/package.json
@@ -88,6 +88,6 @@
   },
   "simple-git-hooks": {
     "pre-commit": "npm run lint",
-    "pre-push": "npm run test"
+    "pre-push": "npm run test; npm run types"
   }
 }
